# doc-parser

./: pyproject.toml
src/doc_parser/: __init__.py  constants.py  image_analysis.j2  llm.py  markdown_prompt.j2  parser.py  utils.py
