[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "doc-parser"
dynamic = ["version"]
description = "Parse PDF documents into markdown formatted content using Vision LLMs"
requires-python = ">=3.9"
keywords = [
    "pdf",
    "markdown",
    "pdf to markdown",
    "vision llm",
    "document parser",
    "ocr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jinja2>=3.0.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.0.0",
    "ollama>=0.4.4",
    "opencv-python>=4.10.0.84",
    "pydantic>=2.0.0",
    "pymupdf>=1.22.0",
    "tenacity>=9.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.1",
    "black[jupyter]>=24.8.0",
    "build>=1.2.2",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.8.3",
    "twine>=6.0.1",
]
gemini = [
    "google-generativeai==0.8.3",
]
openai = [
    "openai==1.59.8",
]
all = [
    "google-generativeai==0.8.3",
    "openai==1.59.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/doc_parser"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/doc_parser",
    "/tests",
]

[tool.hatch.build.targets.wheel.force-include]
"src/doc_parser/markdown_prompt.j2" = "doc_parser/markdown_prompt.j2"
"src/doc_parser/image_analysis.j2" = "doc_parser/image_analysis.j2"

[tool.hatch.version]
source = "vcs"